# retrun

./: Cargo.toml  README.md  build.rs  datagen.py  gen.py  new_dictionary.txt  output.txt
src/: algorithm.rs  algorithms.rs  cli.rs  dictionary.rs  finder.rs  fs.rs  lib.rs  main.rs
src/algorithms/: hard_mode.rs  normal_mode.rs
