[package]
name = "wsol"
version = "1.0.0"
edition = "2021"
authors = ["tropicbliss <tropicbliss@protonmail.com>"]
license = "MIT"
description = "A simple and fast Wordle word finder"

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
rayon = "1.5.1"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "debuginfo"
