[package]
name = "retrun"
version = "1.0.0"
edition = "2021"
authors = ["tropicbliss <tropicbliss@protonmail.com>"]
license = "MIT"
description = "A simple and fast Wordle word finder"

[dependencies]
clap = { version = "3", features = ["derive"] }
itertools = "0.10"
phf = { version = "0.10.1", features = ["macros"] }

[build-dependencies]
phf_codegen = "0.10.0"
