[package]
name = "retrun"
version = "1.0.0"
edition = "2021"
authors = ["tropicbliss <tropicbliss@protonmail.com>"]
license = "MIT"
description = "A simple and fast Wordle word finder"

[dependencies]
clap = { version = "3.1.12", features = ["derive"] }
phf = { version = "0.10.1", features = ["macros"] }

[build-dependencies]
phf_codegen = "0.10.0"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
